--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "rl-app",
+  "proxy": "https://api.tracker.gg/",
   "version": "0.1.0",
   "private": true,
   "homepage": "https://leanpv.github.io",
